# sfa-scripts

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini
ai_docs/: example.xml  keyvault-command.md  keyvault-doc.md  pack_format.json  sample.py
scripts/: vscode-sync.py
specs/: settings_spec.md  vscode_sync_spec.md
