[project]
name = "sfa-scripts"
version = "0.1.0"
description = "Single File UV Scripts"
requires-python = ">=3.11,<3.13"

dependencies = [
    "pydantic>=2.0.0",
    "pytest>=8.3.5",
    "rich>=13.7.0",
    "azure-identity>=1.15.0",
    "azure-keyvault-secrets>=4.7.0",
    "typer>=0.9.0",
]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*.py"]
testpaths = ["scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]